@@ -11,6 +11,7 @@ dgm-lib v3.1.0
  * Added `dgm::Collision::basic` for Circle, Rectangle and VisionCone with sf::Vector2f
 	* Old collision methods for VisionCone were deprecated, in favor of methods with swapped arguments
  * Added `dgm::Collision::basic` for VisionCone and Rectangle
+ * Compilation using Clang (18+) is supported on both Windows and Ubuntu
 
 dgm-lib v3.0.0
  * Library target has been renamed to `dgm-lib` and a `dgm::dgm-lib` alias has been added. Use that for linking
